[package]
name = "hello-soroban-kit"
version = "0.1.3"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]
description = "Demo soroban smart contract for soroban-kit."
repository = "https://github.com/fredericrezeau/soroban-kit"
keywords = ["soroban", "stellar", "blockchain", "smart-contract"]
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dependencies.soroban-macros]
path = "../soroban-macros"
version = "0.1.3"
default-features = false
features = ["storage", "state-machine"]

[dependencies.soroban-tools]
path = "../soroban-tools"
version = "0.1.3"

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
