[package]
name = "hello-soroban-kit"
version = "0.1.9"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]
description = "Demo soroban smart contract for soroban-kit."
repository = "https://github.com/fredericrezeau/soroban-kit"
keywords = ["soroban", "stellar", "blockchain", "smart-contract", "web3"]
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dependencies.soroban-kit]
path = "../soroban-kit"
version = "0.1.9"
default-features = false
features = [
    "commitment-scheme",
    "storage",
    "state-machine",
    "circuit-breaker",
    "oracle",
    "utils",
]

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
