[package]
name = "soroban-kit"
version = "0.1.4"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]
description = "Fast, lightweight functions and macros with lean, targeted functionality for Soroban smart contract development."
repository = "https://github.com/fredericrezeau/soroban-kit"
keywords = ["soroban", "stellar", "blockchain", "smart-contract"]
license-file = "LICENSE"

[lib]
doctest = false

[dependencies.soroban-macros]
path = "../soroban-macros"
version = "0.1.4"
optional = true
default-features = false

[dependencies.soroban-tools]
path = "../soroban-tools"
version = "0.1.4"
optional = true
default-features = false

[features]
default = ["commitment-scheme", "storage", "state-machine"]
commitment-scheme = ["soroban-macros/commitment-scheme", "soroban-tools/commitment-scheme"]
storage = ["soroban-macros/storage", "soroban-tools/storage"]
state-machine = ["soroban-macros/state-machine", "soroban-tools/state-machine"]
mock-storage = ["soroban-macros/mock-storage", "soroban-tools/mock-storage", "storage"]