[package]
name = "soroban-macros"
version = "0.1.2"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]
description = "Fast, lightweight functions and macros with lean, targeted functionality for Soroban smart contract development."
repository = "https://github.com/fredericrezeau/soroban-kit"
keywords = ["soroban", "stellar", "blockchain", "smart-contract"]
license-file = "LICENSE"
readme = "README.md"

[lib]
proc-macro = true
doctest = false

[dependencies]
soroban-sdk = "=20.0.0-rc2.2"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.soroban-tools]
path = "../soroban-tools"
version = "0.1.2"
optional = true
default-features = false

[dev_dependencies]
soroban-sdk = { version = "=20.0.0-rc2.2", features = ["testutils"] }

[features]
default = ["storage", "state-machine"]
storage = ["soroban-tools/storage"]
mock-storage = ["soroban-tools/mock-storage", "storage"]
state-machine = ["soroban-tools/state-machine"]