[package]
name = "soroban-tools"
version = "0.1.7"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]
description = "Fast, lightweight functions and macros with lean, targeted functionality for Soroban smart contract development."
repository = "https://github.com/fredericrezeau/soroban-kit"
keywords = ["soroban", "stellar", "blockchain", "smart-contract"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata]
homepage = "https://litemint.com"

[lib]
doctest = false

[dependencies]
soroban-sdk = "20.0.0"

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
default = ["commitment-scheme", "storage", "state-machine", "circuit-breaker"]
commitment-scheme = []
storage = []
state-machine = []
circuit-breaker = ["state-machine"]
mock-storage = ["storage"]
