[package]
name = "soroban-tools"
version = "0.1.11"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]
description = "Fast, lightweight functions and macros with lean, targeted functionality for Soroban smart contract development."
repository = "https://github.com/fredericrezeau/soroban-kit"
keywords = ["soroban", "stellar", "blockchain", "smart-contract"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata]
homepage = "https://litemint.com"

[lib]
doctest = false

[dependencies]
soroban-sdk = "20.3.2"

[dev_dependencies]
soroban-sdk = { version = "20.3.2", features = ["testutils"] }

[features]
default = [
    "commitment-scheme",
    "storage",
    "state-machine",
    "circuit-breaker",
    "oracle",
    "utils",
]
oracle = []
commitment-scheme = []
storage = []
state-machine = []
circuit-breaker = ["state-machine"]
utils = []
mock-storage = ["storage"]
